# linear

./: .gitignore  LICENSE  README.md  linear.cabal
app/: Main.hs
src/: Eval.hs  LinearParser.hs  TypeChecker.hs  Types.hs  Utils.hs
test/: Spec.hs
