name:                linear
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/linear#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Beal
maintainer:          alexlbeal@gmail.com
copyright:           2016 Alex Beal
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, LinearParser, Types, Utils, TypeChecker, Eval
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , parsec
                     , text
                     , ghc
                     , mtl
                     , lens-simple
  default-language:    Haskell2010    

executable linear-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linear
                     , containers
                     , exceptions
                     , parsec
                     , text
                     , ghc
                     , mtl
                     , lens-simple                   
  default-language:    Haskell2010

test-suite linear-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linear
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hunit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/linear
